[tool.poetry]
name = "langgraph-react"
version = "0.1.0"
description = ""
authors = ["Jay Shah <jayy.shah16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"
langchain-tavily = "^0.2.11"
langgraph = "^0.6.6"
python-dotenv = "^1.1.1"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
